fixed spacing dropdown

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -274,3 +274,8 @@ body {
 .btn-center {
   margin: auto;
 }
+
+.day-dropdown {
+  margin-top: 5px;
+  padding-bottom: 10px;
+}
